After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 131343 - Page misplaced when printing or print-previewing a multipage landscape sheet
Page misplaced when printing or print-previewing a multipage landscape sheet
Status: RESOLVED FIXED
Product: Gnumeric
Classification: Applications
Component: Printing
git master
Other Linux
: Normal normal
: ---
Assigned To: Jody Goldberg
Jody Goldberg
Depends on:
Blocks:
 
 
Reported: 2004-01-13 15:48 UTC by Arnout 'raboof' Engelen
Modified: 2005-08-15 01:37 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
patch (already aplied to cvs HEAD, to be backported) (3.25 KB, patch)
2004-01-15 15:22 UTC, Andreas J. Guelzow
none Details | Review

Description Arnout 'raboof' Engelen 2004-01-13 15:48:58 UTC
When printing or previewing this file:

  http://bzzt.net/~arnouten/rekening.gnumeric

the output is misplaced like this:

  http://bzzt.net/~arnouten/gnumeric_mispositioned.jpg

To reproduce:

* started gnumeric as:                                                    
     
  $ gnumeric rekening.gnumeric                                            
     
* click File->Print...                                                    
     
* choose 'Paper' tab                                                      
     
* set 'Page orientation' to 'Landscape'                                   
     
* hit 'Print preview'                                                     
     
(this is the point where i took the screenshot at                         
     
http://www.bzzt.net/~arnouten/gnumeric_mispositioned.jpg)                 
     
* close 'print preview window'                                            
     
* click File->Print...                                                    
     
* choose 'Paper' tab                                                      
     
                                                                          
     
Now, the 'Page orientation' is set to 'Portrait'. This is different from  
     
what i had seen so far.                                                   
      
                                                                          
     
Before, 'Page orientation' would still be on 'Landscape' at this point, and
printing/previewing would work correctly the second time around.
Comment 1 Andreas J. Guelzow 2004-01-13 16:42:02 UTC
Misplaced is not quite the correct term: we are rendering the page in
portrait into a preview expecting landscape or so it seems.

I can replicate this in cvs HEAD (and assume the same problem can be
replicated in gnome-1-2) and will have a look at this.

You can avoid the problem by setting the page orientation in the
page-setup dialog before trying to print.
Comment 2 alexander.winston 2004-01-14 02:18:36 UTC
Adding the screenshot keyword.
Comment 3 Andreas J. Guelzow 2004-01-15 06:43:29 UTC
Looking at the code this is not very surprising. We are calculating
the page breaks already before we present the print dialog (based on
the paper size determined in the pagesetup dialog). 

This should be an easy fix...

I'll do it when I get gtk+ to compile again.
Comment 4 Andreas J. Guelzow 2004-01-15 15:22:23 UTC
Created attachment 23385 [details] [review]
patch (already aplied to cvs HEAD, to be backported)
Comment 5 Andreas J. Guelzow 2004-01-15 15:23:01 UTC
fixed in cvs head. I wil backport it later today.
Comment 6 Andreas J. Guelzow 2004-01-15 17:23:35 UTC
backported to 1.2.x